--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -26,7 +26,7 @@
               [showSelectDialog]="showSelectDialog.bind(this)" [showSolutionDialog]="showSolutionDialog.bind(this)"
               [showCreateProjectDialog]="showCreateProjectDialog.bind(this)"
               [showOpenProjectButtonDialog]="showOpenProjectButtonDialog.bind(this)"
-              [showCreateFlowunitDialog]="showCreateFlowunitDialog.bind(this)" [projects]="projects" [oldName]="name"
+              [showCreateFlowunitDialog]="showCreateFlowunitDialog.bind(this)" [projects]="projects"
               (projectsEmmiter)="getToolBarProjectsChange($event)" [solutionList]="solutionList"
               [projectName]="projectName">
             </app-tool-bar>
